force-app/main/default/objects/Travel_Expense_Claim__c/Travel_Expense_Claim__c.object-meta.xml
<CustomObject>
    <label>Travel Expense Claim</label>
    <nameField>
        <displayFormat>TEC-{000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Expense Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>