force-app/main/default/objects/Travel_Expense_Claim__c/fields/Approved_KM__c.field-meta.xml
<CustomField>
    <fullName>Approved_KM__c</fullName>
    <label>Approved KM</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>