force-app/main/default/objects/Travel_Expense_Claim__c/fields/Calculated_KM__c.field-meta.xml
<CustomField>
    <fullName>Calculated_KM__c</fullName>
    <label>Calculated KM</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>