force-app/main/default/objects/Travel_Expense_Claim__c/fields/Rate_Per_KM__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_KM__c</fullName>
    <label>Rate Per KM</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>