force-app/main/default/objects/Travel_Expense_Claim__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Travel Expense Claims</relationshipLabel>
    <relationshipName>TravelExpenseClaims</relationshipName>
    <type>Lookup</type>
</CustomField>